--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 .headerLinks {
     display: flex;
