--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(201, 195, 195);
+  background: url('./Image//asphalt-dark-dawn-531321.jpg') no-repeat center center fixed;
+  background-size: cover;
 }
 
 code {
