--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .mainDiv {
   display: flex;
-  justify-content: center;
-  margin-top: 14%;
-  font-size: 4rem;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 16%;
+  line-height: 3rem;
+  font-size: 3.5rem;
+  font-weight: 600;
   color: #e7e1e1;
 }
