--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url('./Image//asphalt-dark-dawn-531321.jpg') no-repeat center center fixed;
+  background: url('./Image/adventure-clouds-crater-1643113.jpg') no-repeat center center fixed;
   background-size: cover;
+  height: fit-content;
 }
 
 code {
