test different background image size

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
   margin-top: 13%;
   line-height: 3rem;
   font-weight: 600;
-  color: #e7e1e1;
+  color: #e0d9d9;
 
   .mainName {
     font-size: 3.5rem;
