update about me style

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,14 @@
   
 }
 
+// About me page
+.ui.active.aboutMeModal {
+
+      .aboutMeImage {
+        padding: 2%;
+      }
+  }
+
 // Modal
 .ui.modal {
   top: 5%;
