update links in projects

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,6 +56,11 @@
   .ui.image {
     cursor: pointer;
   }
+
+  .header {
+    cursor: pointer;
+  }
+
   .mobileResume {
     text-align: center;
     font-weight: 600;
